# pkgu

./: .gitignore  LICENSE  README.md  __init__.py  _version.py  cache.db  cache.py  demo.py  main.py  pipu.py  pkgu.py  pkgu_dev.py  pyproject.toml  requirements.txt  setup.py
.dev/: pkgu_dev.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature.md
.github/workflows/: python-app.yml
tests/: test_pkgu.py
