[tool.poetry]
name = "pkgu"
version = "0.0.19"
description = "Find the out-dated packages installed by the pip tool and update them."
authors = ["Abeautifulsnow <lnrunstone.0727@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.10.5"
orjson = "^3.8.10"
prettytable = "^3.8.0"
loguru = "^0.6.0"
colorama = "^0.4.5"
halo = "^0.0.31"
toml = "^0.10.2"
py-retry = "^0.0.4"
simple-term-menu = "^1.5.0"
importlib-metadata = {version = "^1.0", python = "<3.8"}
mypy = "^1.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
