[tool.poetry]
name = "pkgu"
version = "0.0.28"
description = "Manage the installed package by providing support for updating and uninstalling."
authors = ["Abeautifulsnow <lnrunstone.0727@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.10.5"
orjson = "^3.8.10"
prettytable = "^3.8.0"
loguru = "^0.6.0"
colorama = "^0.4.5"
halo = "^0.0.31"
toml = "^0.10.2"
py-retry = "^0.0.4"
simple-term-menu = "^1.5.0"
importlib-metadata = {version = "^1.0", python = "<3.8"}
inquirer = "^3.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.pyright]
reportGeneralTypeIssues = false
